Bug 206300 - Selecting a group along with Contacts to print crashes Kontact.
Summary: Selecting a group along with Contacts to print crashes Kontact.
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-04 23:42 UTC by Sabine Faure
Modified: 2009-09-11 00:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-09-04 23:42:01 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Configure Akonadi with an IMAP and Kolab resource.
- Launch Kaddressbook
- Create a couple of Contacts and a group in an Address Book (ex: AB 1)
- Select everything in AB1 (including the group)
- Go to File menu/Print...
- Select 'Print to File (PDF)'
- Choose a name and a location for the .PDF file
- Click on 'Print'
- Check the 'Selected contacts' QToolButton
- Click on 'Next' twice
- Click on 'Finish'

Kontact crashes since groups are not meant to be printed along with Contacts.


Trunk, Svn Rev 1019588
Comment 1 Tobias Koenig 2009-09-05 08:29:45 UTC
SVN commit 1020031 by tokoe:

Do not crash when try to print a contact group

BUG: 206300


 M  +6 -4      printingwizard.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1020031
Comment 2 Sabine Faure 2009-09-11 00:01:35 UTC
It is corrected now.

Even if a group is selected it is possible to print only the Contacts.
Kaddressbook does not crash anymore.

Trunk, Svn Rev 1021831