Do not crash when try to print a contact group

BUG: 206300

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1020031